<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Turbo Launcher</string>
    <string name="app_title" translatable="false">Turbo Launcher®</string>
    <string name="app_version" translatable="false">0.0.15</string>
    <string name="app_copyright" translatable="false">Copyright \u00A9 2013 – 2017 Phonemetra</string>
    <string name="app_beta">Beta</string>
    <string name="pref_title_build_info">Build</string>
    <string name="pref_title_turbo_version">Turbo Launcher Version</string>
    <string name="pref_title_home_screen_preferences">Home screen</string>
    <string name="pref_summary_home_screen_preferences">Configure Home screen Layout and Bubble Text</string>
    <string name="pref_title_screen_layout_category">Screen Layout</string>
    <string name="pref_title_bubble_text_category">Bubble Text</string>
    <string name="pref_bubble_text_size_title">Text size</string>
    <string name="pref_bubble_text_size_summary">Select text size</string>
    <string name="pref_bubble_text_color_title">Text color</string>
    <string name="pref_bubble_text_color_summary">Select text color</string>
    <string name="pref_title_drawer_preferences">Drawer</string>
    <string name="pref_summary_drawer_preferences">Configure Apps Drawer</string>
    <string name="pref_title_drawer_layout_category">Drawer Layout</string>
    <string name="pref_drawer_background_color_title">Background color</string>
    <string name="pref_drawer_background_color_summary">Select background color</string>
    <string name="pref_title_dock_preferences">Dock</string>
    <string name="pref_summary_dock_preferences">Configure Dock</string>
    <string name="pref_title_folder_preferences">Folder</string>
    <string name="pref_summary_folder_preferences">Configure Folder</string>
    <string name="pref_title_theme_preferences">Themes</string>
    <string name="pref_summary_theme_preferences">Configure Themes</string>
    <string name="pref_title_gesture_preferences">Gestures</string>
    <string name="pref_summary_gesture_preferences">Configure Gestures</string>
    <string name="pref_title_notifier_preferences">Notifier</string>
    <string name="pref_summary_notifier_preferences">Configure Notifications</string>
    <string name="pref_title_advanced_preferences">Advanced</string>
    <string name="pref_summary_advanced_preferences">Configure Advanced</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="all_apps_search_bar_hint">Search Apps</string>
    <string name="all_apps_loading_message">Loading Apps&#8230;</string>
    <string name="all_apps_no_search_results">No Apps found matching \"<xliff:g id="query" example="Android">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="msg_no_phone_permission"><xliff:g id="app_name" example="Launcher3">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="disabled_app_label">Disabled <xliff:g id="app_name" example="Messenger">%1$s</xliff:g></string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="accessibility_action_overview">Overview</string>
    <string name="allow_rotation_title">Allow Home screen rotation</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_blocked_desc">Current Display setting doesn\'t permit rotation</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="app_downloading_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> downloading, <xliff:g id="progress" example="30%">%2$s</xliff:g> complete</string>
    <string name="app_waiting_download_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> waiting to install</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g id="number" example="1">%1$s</xliff:g> column <xliff:g id="number" example="1">%2$s</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="move_to_hotseat_position">Move to favorites position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="item_moved">Item moved</string>
    <string name="add_to_folder">Add to folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="add_to_folder_with_app">Add to folder with <xliff:g id="name" example="Messenger">%1$s</xliff:g></string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="create_folder_with">Create folder with: <xliff:g id="name" example="Game">%1$s</xliff:g></string>
    <string name="folder_created">Folder created</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_move_screen_left">Move screen to left</string>
    <string name="action_move_screen_right">Move screen to right</string>
    <string name="screen_moved">Screen moved</string>
    <string name="action_resize">Resize</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="widget_resized">Widget resized to width <xliff:g id="number" example="2">%1$s</xliff:g> height <xliff:g id="number" example="1">%2$s</xliff:g></string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="shortcuts_menu_description"><xliff:g id="number_of_shortcuts" example="3">%1$d</xliff:g> shortcuts for <xliff:g id="app_name" example="Messenger">%2$s</xliff:g></string>
</resources>