<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:key="pref_homescreen"
        android:icon="@drawable/ic_settings_homescreen"
        android:title="@string/pref_title_home_screen_preferences"
        android:summary="@string/pref_summary_home_screen_preferences">
        <PreferenceCategory android:title="@string/pref_title_screen_layout_category" >

            <SwitchPreference
                    android:key="pref_allowRotation"
                    android:title="@string/allow_rotation_title"
                    android:defaultValue="@bool/allow_rotation"
                    android:persistent="true"
            />

        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceCategory android:title="@string/pref_title_build_info" >
        <Preference
            android:key="pref_version"
            android:icon="@drawable/ic_settings_about"
            android:title="@string/pref_title_turbo_version"
            android:summary="@string/app_copyright" />


    </PreferenceCategory>

</PreferenceScreen>
